[package]
name = "yearsfx"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Appends years in range to input"
authors = ["mztikk <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/yearsfx"
homepage = "https://github.com/mztikk/yearsfx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
atty = "0.2"
structopt = "0.3"
chrono = "0.4"
